--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
          <h1 class="main-heading">My Gallery</h1>
         <div class="container">           
             <div class="box">
-                <img class = "image" src="assets\image1.jpg" alt="">
+                <img class = "image" src="image1.jpg" alt="">
                 <p>Image1</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image2.jpeg" alt="">
+                <img class = "image" src="image2.jpeg" alt="">
                 <p>Image2</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image3.jpeg" alt="">
+                <img class = "image" src="image3.jpeg" alt="">
                 <p>Image3</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image4.jpeg" alt="">
+                <img class = "image" src="image4.jpeg" alt="">
                 <p>Image4</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image5.jpeg" alt="">
+                <img class = "image" src="image5.jpeg" alt="">
                 <p>Image5</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image6.jpeg" alt="">
+                <img class = "image" src="image6.jpeg" alt="">
                 <p>Image6</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image7.jpeg" alt="">
+                <img class = "image" src="image7.jpeg" alt="">
                 <p>Image7</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image8.jpeg" alt="">
+                <img class = "image" src="image8.jpeg" alt="">
                 <p>Image8</p>
             </div>
             <div class="box">
-                <img class = "image" src="assets\image9.jpeg" alt="">
+                <img class = "image" src="image9.jpeg" alt="">
                 <p>Image9</p>
             </div>
         </div>  
